; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_sync.c_fifo_push.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_sync.c_fifo_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @fifo_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fifo_push(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @hb_fifo_push(i32* %8, i32* %9)
  br label %13

11:                                               ; preds = %2
  %12 = call i32 @hb_buffer_close(i32** %4)
  br label %13

13:                                               ; preds = %11, %7
  ret void
}

declare dso_local i32 @hb_fifo_push(i32*, i32*) #1

declare dso_local i32 @hb_buffer_close(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
